// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders 1`] = `
<View
  onLayout={[Function]}
>
  <MultiSlider
    allowOverlap={true}
    containerStyle={
      Array [
        Object {
          "justifyContent": "center",
        },
        undefined,
      ]
    }
    customMarker={[Function]}
    customMarkerLeft={[Function]}
    customMarkerRight={[Function]}
    enabledOne={true}
    enabledTwo={true}
    markerOffsetX={0}
    markerOffsetY={0}
    markerStyle={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#bac7d5",
        "borderRadius": 15,
        "borderWidth": 1,
        "height": 30,
        "margin": 3,
        "shadowColor": "#171b1e",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
        "width": 30,
      }
    }
    max={50}
    min={1}
    onValuesChange={[Function]}
    onValuesChangeFinish={[Function]}
    onValuesChangeStart={[Function]}
    pressedMarkerStyle={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#bac7d5",
        "borderRadius": 15,
        "borderWidth": 1,
        "height": 30,
        "margin": 3,
        "shadowColor": "#171b1e",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
        "width": 30,
      }
    }
    selectedStyle={
      Object {
        "backgroundColor": "#0176D2",
      }
    }
    sliderLength={0}
    snapped={false}
    step={1}
    touchDimensions={
      Object {
        "borderRadius": 0,
        "height": 30,
        "slipDisplacement": 500,
        "width": 30,
      }
    }
    trackStyle={
      Object {
        "borderRadius": 5,
        "height": 4,
      }
    }
    unselectedStyle={
      Object {
        "backgroundColor": "#bac7d5",
      }
    }
    values={
      Array [
        1,
        50,
      ]
    }
  />
</View>
`;

exports[`Slider renders correctly with all values equal 1`] = `
<View
  onLayout={[Function]}
>
  <MultiSlider
    allowOverlap={true}
    containerStyle={
      Array [
        Object {
          "justifyContent": "center",
        },
        undefined,
      ]
    }
    customMarker={[Function]}
    customMarkerLeft={[Function]}
    customMarkerRight={[Function]}
    enabledOne={false}
    enabledTwo={false}
    markerOffsetX={0}
    markerOffsetY={0}
    markerStyle={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#bac7d5",
        "borderRadius": 15,
        "borderWidth": 1,
        "height": 30,
        "margin": 3,
        "shadowColor": "#171b1e",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
        "width": 30,
      }
    }
    max={501}
    min={499}
    onValuesChange={[Function]}
    onValuesChangeFinish={[Function]}
    onValuesChangeStart={[Function]}
    pressedMarkerStyle={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#bac7d5",
        "borderRadius": 15,
        "borderWidth": 1,
        "height": 30,
        "margin": 3,
        "shadowColor": "#171b1e",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
        "width": 30,
      }
    }
    selectedStyle={
      Object {
        "backgroundColor": "#0176D2",
      }
    }
    sliderLength={0}
    snapped={false}
    step={1}
    touchDimensions={
      Object {
        "borderRadius": 0,
        "height": 30,
        "slipDisplacement": 500,
        "width": 30,
      }
    }
    trackStyle={
      Object {
        "borderRadius": 5,
        "height": 4,
      }
    }
    unselectedStyle={
      Object {
        "backgroundColor": "#bac7d5",
      }
    }
    values={
      Array [
        500,
        500,
      ]
    }
  />
</View>
`;

exports[`Slider renders with endValue undefined 1`] = `
<View
  onLayout={[Function]}
>
  <MultiSlider
    allowOverlap={true}
    containerStyle={
      Array [
        Object {
          "justifyContent": "center",
        },
        undefined,
      ]
    }
    customMarker={[Function]}
    customMarkerLeft={[Function]}
    customMarkerRight={[Function]}
    enabledOne={true}
    enabledTwo={true}
    markerOffsetX={0}
    markerOffsetY={0}
    markerStyle={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#bac7d5",
        "borderRadius": 15,
        "borderWidth": 1,
        "height": 30,
        "margin": 3,
        "shadowColor": "#171b1e",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
        "width": 30,
      }
    }
    max={50}
    min={1}
    onValuesChange={[Function]}
    onValuesChangeFinish={[Function]}
    onValuesChangeStart={[Function]}
    pressedMarkerStyle={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#bac7d5",
        "borderRadius": 15,
        "borderWidth": 1,
        "height": 30,
        "margin": 3,
        "shadowColor": "#171b1e",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
        "width": 30,
      }
    }
    selectedStyle={
      Object {
        "backgroundColor": "#0176D2",
      }
    }
    sliderLength={0}
    snapped={false}
    step={1}
    touchDimensions={
      Object {
        "borderRadius": 0,
        "height": 30,
        "slipDisplacement": 500,
        "width": 30,
      }
    }
    trackStyle={
      Object {
        "borderRadius": 5,
        "height": 4,
      }
    }
    unselectedStyle={
      Object {
        "backgroundColor": "#bac7d5",
      }
    }
    values={
      Array [
        1,
      ]
    }
  />
</View>
`;
